# AppManager

./: .gitignore  README.md  crowdin.yml  meson.build  meson_options.txt
.github/: copilot-instructions.md  github-stats.sh
.github/workflows/: package.yml
data/: app-manager.desktop.in  com.github.AppManager.gschema.xml  com.github.AppManager.metainfo.xml  style.css
data/resources/: app-manager.gresource.xml
docs/: ARCHITECTURE.md
po/: LINGUAS  POTFILES  README.md  app-manager.pot  de.po  es.po  et.po  fi.po  fr.po  it.po  ja.po  kk.po  lt.po  lv.po  nb.po  nl.po  pt_BR.po  ru.po  sv.po  zh_CN.po
scripts/: fetch-zsync-tools.sh  make-anyimage.sh  make-appimage.sh  mass-install.sh  mass-manage.sh
src/: application.vala  background-updater.vala  meson.build
src/core/: app_constants.vala  app_image_assets.vala  app_image_metadata.vala  app_paths.vala  background_update_service.vala  build_info.vala.in  desktop_entry.vala  i18n.vala  installation_record.vala  installation_registry.vala  installer.vala  path_migration_service.vala  staged_updates.vala  update_sources.vala  updater.vala
src/utils/: file_utils.vala  ui_utils.vala
src/windows/: details_window.vala  dialog_window.vala  drop_window.vala  main_window.vala  preferences_window.vala
